--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -36,28 +37,49 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //cameraX
-    implementation "androidx.camera:camera-core:1.0.2"
-    implementation "androidx.camera:camera-camera2:1.0.2"
-//    implementation "androidx.camera:camera-video:1.1.0-beta02"
-    // CameraX Lifecycle Library
-    implementation "androidx.camera:camera-lifecycle:1.0.2"
-    // CameraX View class
-    implementation "androidx.camera:camera-view:1.0.0-alpha27"
-//    implementation "androidx.camera:camera-extensions:1.1.0-beta02"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt")
+    implementation("com.google.android.material:material:1.6.0-alpha02")
+    implementation("androidx.appcompat:appcompat:1.4.1")
+    implementation("androidx.core:core-ktx:1.7.0")
+    implementation("androidx.constraintlayout:constraintlayout:2.1.3")
+    implementation("androidx.camera:camera-core:1.1.0-beta01")
+    implementation("androidx.camera:camera-camera2:1.1.0-beta01")
+    implementation("androidx.camera:camera-lifecycle:1.1.0-beta01")
+    implementation("androidx.camera:camera-extensions:1.1.0-beta01")
+    implementation("androidx.camera:camera-view:1.1.0-beta01")
+    implementation("androidx.fragment:fragment:1.4.1")
+    implementation("androidx.fragment:fragment-ktx:1.4.1")
+    implementation("androidx.navigation:navigation-fragment-ktx:2.4.0")
+    implementation("androidx.navigation:navigation-ui-ktx:2.4.0")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.0")
+    implementation("androidx.viewpager2:viewpager2:1.0.0")
 
-    // Glide library for image management and loading.
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation("io.coil-kt:coil:1.4.0")
+    implementation("io.coil-kt:coil-video:1.1.1")
 
-    //zoom image
-    implementation 'com.jsibbold:zoomage:1.3.1'
+//    implementation 'androidx.core:core-ktx:1.7.0'
+//    implementation 'androidx.appcompat:appcompat:1.4.1'
+//    implementation 'com.google.android.material:material:1.5.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+//    testImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+//
+//    //cameraX
+//    implementation "androidx.camera:camera-core:1.0.2"
+//    implementation "androidx.camera:camera-camera2:1.0.2"
+////    implementation "androidx.camera:camera-video:1.1.0-beta02"
+//    // CameraX Lifecycle Library
+//    implementation "androidx.camera:camera-lifecycle:1.0.2"
+//    // CameraX View class
+//    implementation "androidx.camera:camera-view:1.0.0-alpha27"
+////    implementation "androidx.camera:camera-extensions:1.1.0-beta02"
+//
+//    // Glide library for image management and loading.
+//    implementation 'com.github.bumptech.glide:glide:4.12.0'
+//
+//    //zoom image
+//    implementation 'com.jsibbold:zoomage:1.3.1'
 
 }
